<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_character.SingleCharacterFragment"
    android:background="@color/black"
    >

<!--<com.google.android.material.card.MaterialCardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:id="@+id/card"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:cardCornerRadius="55dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--    android:layout_marginBottom="10dp"-->
<!--        android:layout_marginStart="18dp"-->
<!--        android:layout_marginEnd="18dp"-->
<!--        android:layout_gravity="center_vertical"-->
<!--        app:strokeColor="@color/mtrl_textinput_default_box_stroke_color"-->
<!--        android:backgroundTint="@color/black"-->
<!--        app:strokeWidth="3dp">-->


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/character_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="@string/name_character"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            tools:text="@string/status_character"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/species_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/species_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <TextView
            android:id="@+id/species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="30dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toStartOf="@id/species_text"
            app:layout_constraintTop_toBottomOf="@+id/species_text"
            tools:text="@string/species_character"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/type_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/species" />

        <TextView
            android:id="@+id/type"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_character"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:paddingStart="30dp"
            app:layout_constraintBottom_toTopOf="@+id/gender_text"
            app:layout_constraintStart_toStartOf="@id/species"
            app:layout_constraintTop_toBottomOf="@+id/type_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/gender_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/type_text"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <TextView
            android:id="@+id/gender"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="@id/species"
            app:layout_constraintTop_toBottomOf="@+id/gender_text"
            tools:text="@string/gender_character"
            tools:ignore="RtlSymmetry" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:visibility="invisible"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toTopOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0AFFFFFF"
            android:drawableLeft="@drawable/ic_baseline_chevron_left_24"
            android:drawableTint="@color/teal_200"
            android:text="@string/back_button"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:typeface="sans"
            app:cornerRadius="100dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            app:strokeColor="#BA03DAC5"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
<!--</com.google.android.material.card.MaterialCardView>>-->
</FrameLayout>