<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:shadowRadius="15"
        android:shadowColor="@color/teal_200"
        android:textStyle="bold|italic"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@id/home_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/home_pic"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@mipmap/pngegg"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/intro_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/home_intro"
        android:textColor="#D0989A9A"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_pic" />


    <Button
        android:id="@+id/characters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/all_characters_button"
        android:textColor="@color/teal_200"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:cornerRadius="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/create_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_text"
        app:strokeColor="@color/teal_200"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/create_button"
        android:textColor="@color/teal_200"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characters_button"
        app:strokeColor="@color/teal_200"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>