<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".ui.create_character.CreateNewCharacterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:textColorHint="@color/mtrl_textinput_default_box_stroke_color"
        app:placeholderTextColor="@color/purple_200"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#DDEDEA"
            android:hint="@string/enter_name" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:textColorHint="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_status_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#DDEDEA"
            android:hint="@string/enter_status" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:textColorHint="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutStatus"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_species_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#DDEDEA"
            android:hint="@string/enter_species" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:textColorHint="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSpecies"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_type_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#DDEDEA"
            android:hint="@string/enter_type" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        android:textColorHint="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_gender_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#DDEDEA"
            android:hint="@string/enter_gender" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/pic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_character_img"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGender"
        android:backgroundTint="#03FFFFFF"
        android:textColor="@color/teal_200"
        app:strokeColor="@color/teal_200"
        app:strokeWidth="2dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic_button"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/generate_character"
        android:textColor="#030303"
        android:visibility="invisible"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:strokeColor="#030303"
        app:strokeWidth="2dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_round_home_24" />



</androidx.constraintlayout.widget.ConstraintLayout>